--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "tslint": "^6.0.0",
     "typescript": "^3.7.5",
     "uuid": "^3.4.0"
+  },
+  "devDependencies": {
+    "cheerio": "^1.0.0-rc.3"
   }
 }
