npm audit vulns

--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "express-handlebars": "^5.3.1",
     "form-urlencoded": "^6.0.6",
     "fs": "0.0.1-security",
+    "glob-parent": "^6.0.2",
     "http": "0.0.0",
     "https": "^1.0.0",
     "musicbrainz-api": "^0.6.0",
     "node-fetch": "^2.6.7",
-    "nodemon": "^1.3.3",
+    "nodemon": "^2.0.19",
     "redis": "^3.0.2",
     "setlistfm-js": "^1.0.1",
     "tslint": "^6.0.0",
