Add envision 2023 lineup. Update yaml template with remainder of region codes

--- a/lineups/_LINEUP_TEMPLATE.yaml
+++ b/lineups/_LINEUP_TEMPLATE.yaml
@@ -1,6 +1,6 @@
 display_name: Name to be displayed to user
 slug: url_friendly_short_version_of_namea
-region: am|eu|??
+region: am|ap|eu|me
 year: 2023
 days:
   - number: 1 # This is an integer for redis key. 1-indexed for festivals with days, or just single '0' day for fest w/ no days announcee
