Fix coachella lineup

--- a/lineups/coachella_2023.yaml
+++ b/lineups/coachella_2023.yaml
@@ -133,7 +133,7 @@ days:
       - name: Chris Lake
       - name: A Boogie
       - name: Dominic Fike
-      - name: Ja Paul
+      - name: Jai Paul
       - name: Jackson Wang
       - name: Latto
       - name: the Blaze
