Fix lib 2023 lineup

--- a/lineups/lib_2023.yaml
+++ b/lineups/lib_2023.yaml
@@ -25,7 +25,7 @@ days:
       - name: DAVID STARFIRE
       - name: DEATHPACT
       - name: DEER JADE
-      - name: DEER JADE B2B ELIF
+      - name: ELIF
       - name: DEF3
       - name: DIGITAL ETHOS
       - name: DIMOND SAINTS
@@ -37,11 +37,12 @@ days:
       - name: FANNY FEDEROFF
       - name: FR33SOL
       - name: FREE CREATURES
-      - name: G@TTO & VALENTINA
+      - name: G@TTO
+      - name: VALENTINA
       - name: HAMDI
       - name: HELLO YES
       - name: HOUSE OF HAMSA
-      - name: INTEGR&TION
+      - name: INTEGR8TION
       - name: JACQUES LOVE
       - name: JORDAN STRONG
       - name: JOSH KWON
