fix prima 2024 lineup

--- a/lineups/primavera_2024.yaml
+++ b/lineups/primavera_2024.yaml
@@ -143,7 +143,7 @@ days:
       - name: CHANNEL ONE
       - name: CRUMB
       - name: DEPRESIÓN SONORA.
-      - name: DU FART IN THE CLUB
+      - name: DJ FART IN THE CLUB
       - name: F.R.A.C.
       - name: HOFE X 4:40
       - name: MANDY, INDIANA
