--- a/lineups/bonnaroo_2024.yaml
+++ b/lineups/bonnaroo_2024.yaml
@@ -49,6 +49,7 @@ days:
       - name: FAYE WEBSTER
       - name: KEY GLOCK
       - name: THUNDERCAT
+      - name: THE DRIVER ERA
       - name: ISOXO
       - name: GROUPLOVE
       - name: DAVID KUSHNER
