--- a/lineups/coachella_2024.yaml
+++ b/lineups/coachella_2024.yaml
@@ -56,8 +56,11 @@ days:
       - name: Ben Sterling
       - name: Upchuck
       - name: Keyspan
+      - name: Patrick Mason
       - name: Honey Dijon
       - name: Green Velvet
+      - name: Adam Ten
+      - name: Mita Gami
   - number: 2
     date: 2022-04-13
     display_name: Day 2 (April 13/20)
@@ -117,7 +120,8 @@ days:
       - name: Rebuke
       - name: Mandy, Indiana 
       - name: Kimonos
-      - name: Michale Bibi
+      - name: Carlita
+      - name: Michael Bibi
       - name: Eric Prydz
   - number: 3
     date: 2022-04-13
@@ -168,9 +172,11 @@ days:
       - name: feeble little horse
       - name: JOPLYN
       - name: jjuujjuu
+      - name: Mall Grab
       - name: Jamie XX
       - name: Floating Points
       - name: Daphni
+      - name: BLOND:ISH
       - name: Diplo
       - name: Mau P
   - number: 4
