fix acl 2024 lineup

--- a/lineups/acl_2024.yaml
+++ b/lineups/acl_2024.yaml
@@ -44,11 +44,10 @@ days:
       - name: BRAXTON KEITH
       - name: LATE NIGHT DRIVE HOME
       - name: THEO LAWRENCE
-      - name: CHAPARELLE
       - name: MIDNIGHT NAVY
       - name: Q BROTHERS
-      - name: MISTER G W2
-      - name: ANDREW & POLLY
+      - name: MISTER G
+      - name: ANDREW AND POLLY
   - number: 2
     date: 2024-10-05
     display_name: Day 2
