Fix prima chat->cmat artist

--- a/lineups/primavera_2025.yaml
+++ b/lineups/primavera_2025.yaml
@@ -25,7 +25,7 @@ days:
       - name: SPIRITUALIZED
       - name: ARMAND VAN HELDEN
       - name: CASSANDRA JENKINS
-      - name: CHAT
+      - name: CMAT
       - name: DJ KOZE
       - name: MAGDALENA BAY
       - name: CRYSTALLMESS
