Fix prima 2025 lineup

--- a/lineups/primavera_2025.yaml
+++ b/lineups/primavera_2025.yaml
@@ -101,7 +101,7 @@ days:
       - name: HIGH VIS
       - name: JEHIA
       - name: KINETIC
-      - name: D.DAN
+      - name: D DAN
       - name: DJ TOOL
       - name: HYPERAKTIVIST
       - name: YAZZUS
@@ -164,7 +164,6 @@ days:
       - name: KOKOSHCA
       - name: LANAV
       - name: MARIA SOMERVILLE
-      - name: DJ MASDA
       - name: RESTINGA
       - name: RHR
       - name: SANDWELL DISTRICT
