Include URI for prima artist b/c search favoring wrong artist

--- a/lineups/primavera_2025.yaml
+++ b/lineups/primavera_2025.yaml
@@ -102,6 +102,7 @@ days:
       - name: JEHIA
       - name: KINETIC
       - name: D DAN
+        spotify_uri: 7kocSfpPxPoSIRa1yNIQvB
       - name: DJ TOOL
       - name: HYPERAKTIVIST
       - name: YAZZUS
