--- a/lineups/coachella_2025.yaml
+++ b/lineups/coachella_2025.yaml
@@ -20,6 +20,7 @@ days:
       - name: GloRilla
       - name: Yeat
       - name: The Go-Gos
+        spotify_uri: 2mG8HHQ9S9kcbjcrb5N1FE
       - name: MARINA
       - name: Djo
       - name: Tyla
