--- a/lineups/bonnaroo_2025.yaml
+++ b/lineups/bonnaroo_2025.yaml
@@ -102,7 +102,8 @@ days:
       - name: HOZIER
       - name: VAMPIRE WEEKEND
       - name: QUEENS OF THE STONE AGE
-      - name: LSZEE
+      - name: CLOZEE
+      - name: LSDREAM
       - name: REMI WOLF
       - name: RAYE
       - name: ROYEL OTIS
