Fix govball artist

--- a/lineups/govball_2025.yaml
+++ b/lineups/govball_2025.yaml
@@ -7,7 +7,7 @@ days:
     date: 2024-06-06
     display_name: Day 1
     artists:
-      - name: TVLER THE CREATOR
+      - name: TYLER THE CREATOR
       - name: BENSON BOONE
       - name: MK.GEE
       - name: THE BACKSEAT LOVERS
