fix govball again smh

--- a/lineups/govball_2025.yaml
+++ b/lineups/govball_2025.yaml
@@ -58,7 +58,7 @@ days:
       - name: MT. JOY
       - name: CLAIRO
       - name: RAVE
-      - name: ROVEL OTIS
+      - name: ROYEL OTIS
       - name: THE JAPANESE HOUSE
       - name: AMAARAE
       - name: KEY GLOCK
